# skill-manager

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  full-repo-review-report.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.cursor/: mcp.json
.github/workflows/: ci.yml  release-prep.yml  release.yml
Docs/migration/: parity-checklist.md  remaining-gaps.md
Docs/reviews/: 20260714-code-review.md
frontend/: index.html
frontend/src/: App.test.tsx  main.tsx
frontend/src/api/: generated.ts  openapi.json  paths.ts
frontend/src/components/: ExternalAnchor.tsx  FilterBar.tsx  HarnessStatusStrip.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  Shell.tsx  Sidebar.tsx  ThemeSelector.tsx  Toast.test.tsx  Toast.tsx  markdown-content.css
frontend/src/i18n/: common.ts
frontend/src/lib/: contrast.ts  openExternalUrl.test.ts  openExternalUrl.ts  themes.contrast.test.ts  themes.ts  useTheme.tsx
frontend/src/styles/: dialogs.css  index.css  reset.css  scrollbars.css  tokens.css  utilities.css
frontend/src/test/: render.tsx
packaging/homebrew/: skill-manager.rb.tmpl
packaging/npm/: LICENSE  package.json  release-targets.json
packaging/npm/scripts/: channel-ownership.js  install.js
scripts/: bump_version.mjs  ci_validate.sh  dev-tauri.sh  generate_homebrew_formula.sh  install-dev.sh  install_linux_tauri_deps.sh  package_release_artifact.sh  start-dev.sh  stop-dev.sh  sync_public_metadata.mjs  sync_version.mjs  test_rust.sh
skill_manager/api/routers/: marketplace_mcp.py  mcp.py
skill_manager/api/schemas/: __init__.py  mcp.py
skill_manager/application/: container.py  marketplace_cache.py
skill_manager/harness/: __init__.py  catalog.py  contracts.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fsutil.rs  harness.rs  lib.rs  main.rs  paths.rs  skills.rs
src-tauri/src/db/: migrations.rs  mod.rs  scan_config.rs
src-tauri/src/harness/: catalog.rs  contracts.rs  mod.rs  resolution.rs  support_store.rs
src-tauri/src/marketplace/: cache.rs  clis.rs  http.rs  installation.rs  installs.rs  mcp.rs  mod.rs  skills.rs  tokens.rs
src-tauri/src/mcp/: adapters.rs  availability.rs  config_choice.rs  contracts.rs  env.rs  harness_application.rs  identity.rs  inventory.rs  managed_state.rs  mappers.rs  mod.rs  mutations.rs  planner.rs  queries.rs  redaction.rs  store.rs
src-tauri/src/scan/: config_service.rs  harness_scanner.rs  llm.rs  mod.rs  service.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/routes/: health.rs  marketplace.rs  mcp.rs  mod.rs  scan.rs  settings.rs  skills.rs  slash_commands.rs
src-tauri/src/skills/: adapters.rs  github.rs  identity.rs  inventory.rs  manifest.rs  mutations.rs  observations.rs  package.rs  policy.rs  queries.rs  read_models.rs  source_fetch.rs  store.rs
src-tauri/src/slash_commands/: codecs.rs  executor.rs  mod.rs  mutations.rs  path_policy.rs  planner.rs  queries.rs  review_resolver.rs  store.rs  sync_state.rs  targets.rs
src-tauri/tests/: harness_test.rs  marketplace_test.rs  mcp_test.rs  scan_test.rs  settings_test.rs  skills_test.rs  slash_commands_test.rs
src-tauri/tests/common/: mod.rs
tests/integration/: test_http_api.py  test_mcp_routes.py  test_skills_mutations.py
tests/support/: app_harness.py  fake_home.py
tests/unit/: test_backend_container.py  test_mcp_adapters.py  test_mcp_enrichment.py  test_mcp_registry_catalog.py  test_platform_context.py  test_release_targets.py  test_skill_manifest.py  test_skills_adapters.py
troubleshooting/: app-icon-not-updating.md
(+142 files in other folders)
