[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
dynamic = ["version"]
description = "Local app and browser UI for universal skill management across agent harnesses."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "certifi>=2024.0.0",
  "fastapi>=0.135,<0.136",
  "tomli-w>=1.2,<2",
  "ruamel.yaml>=0.18,<0.19",
  "uvicorn>=0.44,<0.45",
  "certifi>=2024.8.30,<2026",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11,<7",
]
scan = [
  "azure-identity>=1.16,<2",
  "google-genai>=1,<2",
  "litellm>=1.40,<2",
]

[project.scripts]
skill-manager = "skill_manager.cli:main"

[project.urls]
Homepage = "https://github.com/mode-io/skill-manager"
Repository = "https://github.com/mode-io/skill-manager"
Issues = "https://github.com/mode-io/skill-manager/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "skill_manager.__version__" }

[tool.setuptools.packages.find]
include = ["skill_manager*"]

[tool.setuptools.package-data]
skill_manager = ["VERSION", "data/prompts/*"]
