[package]
name = "skill-manager"
version = "0.4.0"
description = "Local-first control center for AI extensions"
authors = ["mode-io"]
edition = "2021"

[lib]
name = "skill_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
