[package]
name = "skill-manager"
version = "0.0.1"
description = "Local-first control center for AI extensions"
authors = ["recklyss"]
edition = "2021"

[lib]
name = "skill_manager_lib"
# Desktop-only (macOS/Linux): no mobile staticlib/cdylib artifacts.
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
sha2 = "0.10"
sha1 = "0.10"
walkdir = "2"
regex = "1"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
sha2 = "0.10"
sha1 = "0.10"
walkdir = "2"
